--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
 # This file list the author of this repository
 
-Sheriff Abdulfatai <hyperbayse@gmail.com>
+Sheriff Abdulfatai <sherif102.engr@gmail.com>
